# korean_num

./: .gitignore  Dockerfile  DockerfileStreamlit  README.md  docker-compose.yaml  hello.py  pyproject.toml  start.sh
src/: app.py  client.py  config.py  main.py  routers.py  schemas.py  utils.py
src/korean_num/: app.py  client.py  config.py  main.py  routers.py  schemas.py  utils.py
tests/: test_config.py  test_routers.py  test_utils.py
