[tool.poetry]
name = "korean-num"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    {include = "*", from="src"}, 
    {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.3.3"
pydantic = "^2.7.4"

[tool.poetry.group.fastapi.dependencies]
fastapi = "^0.111.0"
navertts = "^0.3.1"

[tool.poetry.group.streamlit.dependencies]
streamlit = "^1.35.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.26.1"
ruff = "^0.4.8"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore = ["F841"]

[tool.poe.tasks]
test = "pytest tests/"
lint = "poetry run ruff check src tests --fix"
format = "poetry run ruff format src tests"
isort = "poetry run ruff check src tests --select I --fix-only"
api = "poetry run  uvicorn src.app:app --host 0.0.0.0 --port 80 --reload"
x = ["lint", "format", "isort"]

