[project]
name = "korean_num"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "navertts>=0.3.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "requests>=2.32.3",
    "streamlit>=1.42.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "poethepoet>=0.32.2",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
    "uvicorn>=0.34.0",
]
